# deepface-play

./: .gitignore  .gitpod.yml  README.md  pyproject.toml  requirements.txt
notebooks/: example.ipynb
